# ipcx-typed

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  pyproject.toml  pytest.ini
.github/workflows/: codeql.yml  lint_and_formar.yml  publish.yml  test.yml
examples/discord/basic/: bot.py  webserver.py
examples/discord/reversed/: bot.py  webserver.py
examples/fastapi/: client.py  server.py
examples/simple_examples/: calculator_client.py  calculator_server.py  echo_client.py  echo_server.py
ipcx_typed/: __init__.py  _types.py  client.py  errors.py  models.py  server.py
tests/: __init__.py  test_client.py  test_integration.py  test_models.py  test_server.py
