[project]
name = "ipcx-typed"
version = "0.1.0"
description = "Inter-Process Communication (IPC) library for Python with type safety"
authors = [
    {name = "zakharfsk",email = "68950796+zakharfsk@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]
keywords = [
    "ipc",
    "ipcx",
    "ipcx-typed",
    "ipcx-typed-python",
    "discord.py",
    "fastapi",
    "python",
    "asyncio",
    "networking"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/zakharfsk/ipcx"
Documentation = "https://github.com/zakharfsk/ipcx/blob/main/README.md"
Repository = "https://github.com/zakharfsk/ipcx"
Issue = "https://github.com/zakharfsk/ipcx/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.examples.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.12"}
discord = "^2.3.2"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.5"
pytest-cov = ">=4.1.0"
coverage = ">=7.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
